2009-03-24  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Fix line counting, Remove check for plugin.
	* server-src/diskfile.c: Add check for plugin.

2009-03-24  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/planner.c: Default server estimate not larger than half
	                        a tape. log a warning.

2009-03-24  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amsamba.pl: Fix typo and check if smbclient is set.

2009-03-24  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c, application-src/amstar.c:
	  Do sanity check if required arguments are not provided.

2009-03-23  Nikolas Coukouma <atrus@zmanda.com>
	* AUTHORS: remove "active" status if not committed in over 2 years
	* ChangeLog: clean up some messiness
	* contrib/changelog_parse.pl: simple parser for ChangeLog

2009-03-23  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c: Add NO-UNQUOTE to restore.

2009-03-23  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c, application-src/amgtar_perl.pl,
	  client-src/sendbackup-gnutar.c, client-src/sendsize.c,
	  recover-src/extract_list.c: Undo: '--no-unquote' to gtar arguments.
	* application-src/amgtar.c: add NO-UNQUOTE property.
	* man/xml-source/amgtar.8.xml: Document NO-UNQUOTE property.

2009-03-23  Nikolas Coukouma <atrus@zmanda.com>
	* application-src/ampgsql.pl, installcheck/ampgsql.pl:
	  fix ampgsql installchecks

2009-03-23  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c, application-src/amgtar_perl.pl,
	  client-src/sendbackup-gnutar.c, client-src/sendsize.c,
	  recover-src/extract_list.c: Add '--no-unquote' to gtar arguments.

2009-03-23  Jean-Louis Martineau <martineau@zmanda.com>
        * application-src/amgtar.c, application-src/amstar.c,
          client-src/client_util.c, client-src/client_util.h,
          client-src/selfcheck.c, client-src/sendbackup-gnutar.c,