@@ -1,3 +1,7 @@
+2009-03-24  Nikolas Coukouma <atrus@zmanda.com>
+	* application-src/ampgsql.pl, installcheck/ampgsql.pl:
+	  generate more-complete index, improve debugging and error handling
+
 2009-03-24  Jean-Louis Martineau <martineau@zmanda.com>
 	* common-src/conffile.c: Fix line counting, Remove check for plugin.
 	* server-src/diskfile.c: Add check for plugin.
